<resources>
    <string name="app_name">registerandlogin</string>
    <string name="Login">Login</string>
    <string name="SingUp">Create New Account</string>
    <string name="Register">Register</string>
    <string name="Exit">Exit</string>
    <string name="Userprofile">User Profile</string>
    <string name="email">e-mail</string>
    <string name="phone">phone number</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="welcome">Welcome!</string>
    <string name="required">*required</string>
    <string name="UsernameReq">Username required</string>
    <string name="MobilePhone">Phone number required</string>
    <string name="Email">E-mail required</string>
    <string name="PasswordReq">Password required</string>
    <string name="InvalidEmail">Invalid e-mail address</string>
    <string name="MinimumCharacters">Must contain min 8 characters</string>
    <string name="CapitalCharacter">Min 1 capital character required</string>
    <string name="LowerCase">Min 1 lower-case character required</string>
    <string name="Digit">Min 1 digit required</string>
    <string name="SpecialCharacters">Min 1 special charcter required</string>
    <string name="PhoneNumberDigit">11 digits required</string>
    <string name="DigitsInName">Digits aren\'t allowed</string>
    <string name="CharachtersInPhone">Special symbols aren\'t allowed</string>
    <string name="OnlyDigitsInPhone">Only digits allowed</string>
    <string name="EmptyField">Empty field</string>
    <string name="FormSub">Form submitted</string>
    <string name="Save">Save</string>
    <string name="InvlidForm">Invalid form</string>
    <string name="Continue">Continue</string>
    <string name="LoginPage">Login Page</string>
    <string name="WrongPassword">Wrong password!</string>
    <string name="WrongUser">Wrong username!</string>
    <string name="WrongData">Wrong data</string>
    <string name="Look">Look out the window</string>
    <string name="Secret">Secret message</string>
    <string name="TextSecret">My love! I\'m really sorry that I don\'t have money for a gift for you this New Year. I will try my best to make you smile more often next year. I want to thank you for your love, kindness and support.</string>
    <string name="Forever">Forever yours, Stas</string>
</resources>