<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/imageParis"
        android:layout_width="650dp"
        android:layout_height="650dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paris" />

    <Button
        android:id="@+id/buttonWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="428dp"
        android:backgroundTint="#342779"
        android:text="@string/Look"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/secretButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#B12B9F"
        android:text="@string/Secret"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/buttonWindow"
        app:layout_constraintStart_toStartOf="@+id/buttonWindow"
        app:layout_constraintTop_toBottomOf="@+id/buttonWindow" />

    <FrameLayout
        android:id="@+id/backgroundText"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonWindow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

    </FrameLayout>

    <TextView
        android:id="@+id/secretMessageText"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/kopenhagen"
        android:text="@string/TextSecret"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonWindow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/foreverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/kopenhagen"
        android:text="@string/Forever"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonWindow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>