<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

  <TextView
      android:id="@+id/welcome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="140dp"
      android:text="@string/LoginPage"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/passwordContainerLogin"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="32dp"
      app:boxStrokeColor="#342779"
      app:counterEnabled="true"
      app:counterMaxLength="16"
      app:helperText="@string/required"
      app:helperTextTextColor="@android:color/holo_red_dark"
      app:hintTextColor="#342779"
      app:layout_constraintEnd_toEndOf="@+id/nameContainerLogin"
      app:layout_constraintStart_toStartOf="@+id/nameContainerLogin"
      app:layout_constraintTop_toBottomOf="@+id/nameContainerLogin"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:drawableStart="@drawable/custom_lock_focused"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLength="16" />


  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/nameContainerLogin"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="280dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginTop="32dp"

      app:boxStrokeColor="#342779"
      app:helperText="@string/required"
      app:helperTextTextColor="@android:color/holo_red_dark"
      app:hintTextColor="#342779"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/welcome"
      app:startIconTint="#342489">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:drawableStart="@drawable/custom_name_icon"
        android:drawablePadding="8dp"
        android:hint="@string/name"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="textPersonName"
        android:lines="1"
        android:textColorHighlight="#B4A6FF"
        android:textColorLink="#342489" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
      android:id="@+id/loginButton2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:backgroundTint="#342779"
      android:onClick="onClickRegister"
      android:text="@string/Login"
      app:layout_constraintEnd_toEndOf="@+id/passwordContainerLogin"
      app:layout_constraintStart_toStartOf="@+id/passwordContainerLogin"
      app:layout_constraintTop_toBottomOf="@+id/passwordContainerLogin" />

  <TextView
      android:id="@+id/namedata"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="TextView"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/password2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="TextView"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="@+id/namedata"
      app:layout_constraintStart_toStartOf="@+id/namedata"
      app:layout_constraintTop_toBottomOf="@+id/namedata" />

  <TextView
      android:id="@+id/wrongForm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="TextView"
      android:textColor="#CA0000"
      android:textSize="16sp"
      android:visibility="invisible"
      app:layout_constraintEnd_toEndOf="@+id/loginButton2"
      app:layout_constraintStart_toStartOf="@+id/loginButton2"
      app:layout_constraintTop_toBottomOf="@+id/loginButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>