<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E1E1"
    tools:context=".MainActivity2">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="400dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gradient_background" />

    <ImageView
        android:id="@+id/dariaImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/dariacircle" />


    <ImageView
        android:id="@+id/galeryimage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/galerycircle" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="510dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="onClickShowPhoto"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371"

        app:srcCompat="@drawable/circlephoto"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dariaImage"
        tools:srcCompat="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Userprofile"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="#342779"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="#342779"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textEmailAddress"
            android:lines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="#342779"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="#342779"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer"
        app:startIconTint="#342489">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="8dp"
            android:hint="@string/phone"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="phone"
            android:lines="1"
            android:textColorHighlight="#B4A6FF"
            android:textColorLink="#342489" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="#342779"

        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="#342779"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:startIconTint="#342489">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:drawableStart="@drawable/custom_name_icon"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColorHighlight="#B4A6FF"
            android:textColorLink="#342489" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="#342779"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:helperText="@string/required"
        app:helperTextTextColor="@android:color/holo_red_dark"
        app:hintTextColor="#342779"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailContainer"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:drawableStart="@drawable/custom_lock_focused"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="#342779"
        android:onClick="onClickSubmitAndReturn"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>